feat: Extend frontend and controller capabilities